# odsexport

./: .gitignore  .tpp.conf  README.md  pyproject.toml  runtests  setup.py  setup_template.py
.github/workflows/: tests.yml
example/: example_document.ods  write_example_document.py
odsexport/: CellRange.py  Formula.py  ODSWriter.py  Sheet.py  Style.py  __init__.py
src/odsexport/: Cell.py  CellRange.py  Formula.py  Namespaces.py  ODSWriter.py  Sheet.py  Style.py  XMLNode.py  __init__.py
src/odsexport/cli/: ActionDumpXML.py  __init__.py  __main__.py
src/odsexport/tests/: ExpressionTests.py  __init__.py
